# unity-native-rendering

PluginSource/source/: CMakeLists.txt
UnityProject/Assets/Plugins/: RenderingPlugin.bundle
UnityProject/ProjectSettings/: ProjectSettings.asset
